force-app/main/default/objects/Experience_Catalogue__c/Experience_Catalogue__c.object-meta.xml
<CustomObject>
    <label>Experience Catalogue</label>
    <nameField>
        <label>Experience Catalogue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experience Catalogues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>