force-app/main/default/objects/Experience_Catalogue__c/fields/clubName__c.field-meta.xml
<CustomField>
    <fullName>clubName__c</fullName>
    <label>Club Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Club_Name_List</valueSetName>
    </valueSet>
</CustomField>