force-app/main/default/objects/Experience_Catalogue__c/fields/clubSeason__c.field-meta.xml
<CustomField>
    <fullName>clubSeason__c</fullName>
    <description>Season of LV Club</description>
    <label>Club Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clubSeason</valueSetName>
    </valueSet>
</CustomField>