force-app/main/default/objects/Experience_Catalogue__c/fields/clubStatus__c.field-meta.xml
<CustomField>
    <fullName>clubStatus__c</fullName>
    <description>Club Status the member must have to be eligible to Experience</description>
    <label>Club Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ClubStatusList</valueSetName>
    </valueSet>
</CustomField>