force-app/main/default/objects/Experience_Catalogue__c/fields/endDateTime__c.field-meta.xml
<CustomField>
    <fullName>endDateTime__c</fullName>
    <description>Experience End Date &amp; Time</description>
    <label>End Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>