force-app/main/default/objects/Experience_Catalogue__c/fields/experienceType__c.field-meta.xml
<CustomField>
    <fullName>experienceType__c</fullName>
    <description>Type of Brand Experience</description>
    <label>Experience Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Craft Dimension</fullName>
            </value>
            <value>
                <fullName>Digital Event</fullName>
            </value>
            <value>
                <fullName>Early Bird Access</fullName>
            </value>
            <value>
                <fullName>Exclusive Drop</fullName>
            </value>
            <value>
                <fullName>Physical Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>