force-app/main/default/objects/Experience_Catalogue__c/fields/externalExtReference__c.field-meta.xml
<CustomField>
    <fullName>externalExtReference__c</fullName>
    <description>External reference of the service hosting the experience</description>
    <label>External Ext Reference</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>