force-app/main/default/objects/Experience_Catalogue__c/fields/offerCode__c.field-meta.xml
<CustomField>
    <fullName>offerCode__c</fullName>
    <description>Exclusive Drop &amp; Early Bird Access offer code (from ATG)</description>
    <label>offerCode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>