force-app/main/default/objects/Experience_Catalogue__c/fields/offerSKU__c.field-meta.xml
<CustomField>
    <fullName>offerSKU__c</fullName>
    <description>Exclusive Drop &amp; Early Bird Access SKU offer</description>
    <label>Offer SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>