force-app/main/default/objects/Experience_Catalogue__c/fields/offerTypology__c.field-meta.xml
<CustomField>
    <fullName>offerTypology__c</fullName>
    <description>Exclusive Drop &amp; Early Bird Access offer typology</description>
    <label>Offer Typology</label>
    <length>50</length>
    <type>Text</type>
</CustomField>