force-app/main/default/objects/Experience_Catalogue__c/fields/previewDateTime__c.field-meta.xml
<CustomField>
    <fullName>previewDateTime__c</fullName>
    <description>Date from which to display Experience on Client Front</description>
    <label>Preview Date Time</label>
    <type>DateTime</type>
</CustomField>