force-app/main/default/objects/Experience_Catalogue__c/fields/registrationDateTime__c.field-meta.xml
<CustomField>
    <fullName>registrationDateTime__c</fullName>
    <description>Date from which to allow registration Experience on Client Front</description>
    <label>Registration Date Time</label>
    <type>DateTime</type>
</CustomField>