force-app/main/default/objects/Experience_Catalogue__c/fields/startDateTime__c.field-meta.xml
<CustomField>
    <fullName>startDateTime__c</fullName>
    <description>Experience Start Date &amp; Time</description>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>